--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,11 @@
 {
     "python.REPL.enableREPLSmartSend": false,
-
+    "code-runner.respectShebang": false, 
     "workbench.colorCustomizations": {
         "tree.indentGuidesStroke": "#35e20a"
+        
     },
+    "code-runner.executorMap": {
+        "python": "python",
+    }
 }
