--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,5 +7,6 @@
     },
     "code-runner.executorMap": {
         "python": "python",
-    }
+    },
+    "python.analysis.autoImportCompletions": true
 }
